--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0-alpha3",
+    "bootstrap-icons": "^1.10.5",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "firebase": "^9.15.0",
+    "package-name": "^0.1.0",
+    "sweetalert2": "^11.7.5",
+    "vue": "^3.2.13",
+    "vue-resource": "^1.5.3",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -32,12 +39,8 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "rules": {
+      "vue/multi-word-component-names": "off"
+    }
+  }
 }
